template.yml
@@ -1,298 +1,298 @@
AWSTemplateFormatVersion: '2010-09-09'
Description: Step 1 - VPC + ALB
Parameters:
  StudentNumber:
    Type: String

  BackendImage:
    Type: String
Resources:

# VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      #gg

# Subnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1b

# Internet
  IGW:
    Type: AWS::EC2::InternetGateway

  Attach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW

# Routing
  RT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    DependsOn: Attach
    Properties:
      RouteTableId: !Ref RT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  Assoc1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RT

  Assoc2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RT

# Security Group
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2SG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0


  EC2BuildInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0e86e20dae9224db8
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref EC2SG
      IamInstanceProfile: LabInstanceProfile
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          amazon-linux-extras install docker -y
          service docker start
          usermod -a -G docker ec2-user

          # install aws cli (if not present)
          yum install -y aws-cli

          # create app
          mkdir app
          cd app

          # server.js
          cat <<EOF > server.js
          const express = require("express");
          const app = express();
          app.get("/", (req, res) => res.send("Carbon API running 🚀"));
          app.listen(3001, () => console.log("Running"));
          EOF

          # package.json
          cat <<EOF > package.json
          {
            "name": "carbon",
            "version": "1.0.0",
            "main": "server.js",
            "dependencies": {
              "express": "^4.18.2"
            }
          }
          EOF

          # Dockerfile
          cat <<EOF > Dockerfile
          FROM node:18
          WORKDIR /app
          COPY package*.json ./
          RUN npm install
          COPY . .
          EXPOSE 3001
          CMD ["node","server.js"]
          EOF

          # login to ECR
          aws ecr get-login-password --region ${AWS::Region} \
          | docker login --username AWS --password-stdin ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com

          # build image
          docker build -t carbon-backend .

          # tag image
          docker tag carbon-backend:latest ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/carbon-backend:latest

          # push image
          docker push ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/carbon-backend:latest

# Load Balancer
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSG


# ECS Cluster
  Cluster:
    Type: AWS::ECS::Cluster

# ECS SG
  ECSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3001
          ToPort: 3001
          SourceSecurityGroupId: !Ref ALBSG

# Target Group
  TG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 3001
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip

# Listener
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TG

# Service
  Service:
  Type: AWS::ECS::Service
  DependsOn:
    - Listener
    - EC2BuildInstance 
  Properties:
      Cluster: !Ref Cluster
      LaunchType: FARGATE
      TaskDefinition: !Ref Task
      DesiredCount: 1
      NetworkConfiguration:
        AwsvpcConfiguration:
          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2
          SecurityGroups:
            - !Ref ECSSG
          AssignPublicIp: ENABLED
      LoadBalancers:
        - ContainerName: backend
          ContainerPort: 3001
          TargetGroupArn: !Ref TG

  Task:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Cpu: 256
      Memory: 512
      NetworkMode: awsvpc
      RequiresCompatibilities: [FARGATE]
      ExecutionRoleArn: arn:aws:iam::891377043411:role/LabRole
      ContainerDefinitions:
        - Name: backend
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/carbon-backend:latest"
          LogConfiguration:
             LogDriver: awslogs
             Options:
               awslogs-group: /ecs/carbon
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: ecs
          PortMappings:
            - ContainerPort: 3001

    ECRRepo:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: carbon-backend

  # RDS SG
  RDSSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS SG
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ECSSG

# Private Subnets
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: us-east-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: us-east-1b

# DB Subnet
  DBSubnet:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2



  Bucket:
    Type: AWS::S3::Bucket

  UserPool:
    Type: AWS::Cognito::UserPool

  Client:
    Type: AWS::Cognito::UserPoolClient
    Properties:
      UserPoolId: !Ref UserPool

Outputs:
  URL:
    Value: !GetAtt ALB.DNSName
